--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,7 +39,7 @@ android {
 dependencies {
 
     //Yandex Maps
-    implementation 'com.yandex.android:maps.mobile:4.2.2-lite'
+    implementation 'com.yandex.android:maps.mobile:4.2.2-full'
 
     implementation 'com.google.android.gms:play-services-maps:18.1.0'
 
