--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,16 @@ dependencies {
 
     implementation 'com.google.android.gms:play-services-maps:18.1.0'
 
+    // Preferences DataStore
+    implementation "androidx.datastore:datastore-preferences:1.1.0-alpha01"
+
+    // Coroutines
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.1'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.1'
+
+    // Coroutine Lifecycle Scopes
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.5.1"
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
